# hackeurope

./: .gitignore  README.md  manifest.json
backend/: .gitignore  README.md  purge_db.py  pyproject.toml  test_gmail_oauth.py
backend/migrations/: 0001_add_llm_usage_to_interactions.sql  0003_replace_categories_with_jsonb.sql
backend/scripts/: add_llm_usage.py  backfill_categories.py
backend/src/: config.py  db.py  domains.py  gemini_client.py  gmail.py  graph.py  langchain_adapter.py  main.py  schemas.py  supabase_client.py
frontend/: .gitignore  README.md  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/calendars/: route.ts
frontend/app/api/calendars/[calendar_id]/: route.ts
frontend/app/api/email/connect/: route.ts
frontend/app/api/email/disconnect/: route.ts
frontend/app/api/email/status/: route.ts
frontend/app/api/interventions/: route.ts
frontend/app/api/interventions/[intervention_id]/: route.ts
frontend/app/api/interventions/categories/: route.ts
frontend/app/api/interventions/stats/: route.ts
frontend/app/api/me/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx  user-context.tsx
frontend/app/dashboard/analytics/: apex-chart.tsx  page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/lib/: api-types.ts  backend-api.ts  backend-types.ts  frontend-api.ts  proxy-auth.ts
frontend/lib/supabase/: env.ts  proxy.ts  server.ts
notification/: notification.css  notification.html  notification.js
popup/: hello.html  popup.css
scanner/: background.js  scanner.js
(+1 files in other folders)
